# uk-spring-statement-2026

./: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  modal_app.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json
app/: App.css  globals.css  layout.jsx  page.jsx
lib/: parseCSV.js
public/data/: budgetary_impact.csv  constituency.csv  detailed_budgetary_impact.csv  distributional_impact.csv  economic_forecast.json  household_comparison.json  household_decomposition.json  household_scatter.csv  household_stats.json  inequality.csv  intra_decile.csv  local_authorities.csv  mansion_tax_constituency_impact.csv  metrics.csv  uk_baseline.csv  winners_losers.csv
scripts/: generate_uk_baseline.py
src/: App.css  App.jsx  index.css
src/components/: BaselineUKTab.jsx  BudgetBarChart.css  BudgetBarChart.jsx  D3LineChart.css  D3LineChart.jsx  Dashboard.css  Dashboard.jsx  DecileChart.css  DecileChart.jsx  DetailedBudgetTable.jsx  ForecastTab.jsx  ForecastTable.jsx  HouseholdArchetypes.jsx  HouseholdCalculator.css  HouseholdCalculator.jsx  InequalityTable.jsx  IntraDecileChart.jsx  LocalAreaSection.css  LocalAreaSection.jsx  MansionTaxMap.css  MansionTaxMap.jsx  OBRComparisonTable.css  OBRComparisonTable.jsx  PersonalTab.css  PersonalTab.jsx  PopulationTab.jsx  PovertyImpactTable.css  PovertyImpactTable.jsx  UKMap.css  UKMap.jsx  ValidationTab.css  ValidationTab.jsx
src/spring_statement_data/: __init__.py  api.py  calculators.py  cli.py  modal_app.py  obr_parameters.json  pipeline.py  reforms.py  spring_statement.py
src/utils/: chartLogo.jsx  downloadFile.js  exportMapAsSvg.js  policyConfig.js  reformConfig.js  svgHelpers.js
